@@ -1,3 +1,7 @@
+2002-01-04  Philippe Elie  <ph_e@club-internet.fr>
+
+	* module/oprofile.c: add a warning when note buff overflow.
+
 2002-01-04  John Levon  <moz@compsoc.man.ac.uk>
 
 	* module/oprofile.c: pin note at the end on overflow
